fixed red img behind red headline

--- a/src/app/start-page/start-page.component.scss
+++ b/src/app/start-page/start-page.component.scss
@@ -14,6 +14,15 @@
     pointer-events: none;
 }
 
+@media (max-width: 830px) {
+    .red-shadow {
+        left: -554px;
+    }
+    .purple-shadow {
+        right: -615px;
+    }
+}
+
 .primary-text {
     display: flex;
     position: relative;
